--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,23 +51,29 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: zookeeper
+    ports:
+      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
     volumes:
       - ./zookeeper/data:/var/lib/zookeeper/data
       - ./zookeeper/log:/var/lib/zookeeper/log
     networks:
       - beat_to_the_book_network
+    healthcheck:
+      test: ["CMD", "bash", "-c", "echo ruok | nc localhost 2181 | grep imok"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Kafka
   kafka:
     image: confluentinc/cp-kafka:7.5.1
     container_name: beat_to_the_book_kafka
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     ports:
       - "9092:9092"
     environment:
@@ -84,7 +90,7 @@ services:
       timeout: 5s
       retries: 5
 
-#  # Kafka UI (Provectus)
+  #  # Kafka UI (Provectus)
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka_ui
