--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,11 @@ services:
       - ./zookeeper/log:/var/lib/zookeeper/log
     networks:
       - beat_to_the_book_network
+    healthcheck:
+      test: ["CMD-SHELL", "echo ruok | nc localhost 2181 | grep imok"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Kafka
   kafka:
@@ -79,7 +84,7 @@ services:
     networks:
       - beat_to_the_book_network
     healthcheck:
-      test: [ "CMD", "nc", "-z", "localhost", "9092" ]
+      test: ["CMD-SHELL", "nc -z localhost 9092"]
       interval: 10s
       timeout: 5s
       retries: 5
