fix: health check 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
     networks:
       - beat_to_the_book_network
     healthcheck:
-      test: ["CMD-SHELL", "echo ruok | nc localhost 2181 | grep imok"]
+      test: [ "CMD", "echo", "ruok", "|", "nc", "localhost", "2181" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -84,12 +84,12 @@ services:
     networks:
       - beat_to_the_book_network
     healthcheck:
-      test: ["CMD-SHELL", "nc -z localhost 9092"]
+      test: [ "CMD", "nc", "-z", "localhost", "9092" ]
       interval: 10s
       timeout: 5s
       retries: 5
 
-#  # Kafka UI (Provectus)
+  # Kafka UI (Provectus)
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka_ui
